update objective statement

--- a/index.html
+++ b/index.html
@@ -72,21 +72,22 @@
                 <div class="intro-text">
                     <span class="quote">Crafting artistic meaningful games</span>
                     <hr class="star-light">
-                    <p class="bio col-lg-8 col-lg-offset-2 text-center">
-                        Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I dedicate myself to making
-                            intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay
-                            engineer.
-                        <br> <br>
-                        As a game designer, I believe games are art and are an extremely expressive medium. I
-                            loves making visually stunning games with innovative interactions and rich feedback that
-                            invoke something deep from players' mind, and I enjoy tackling tricky design problems
-                            through relentless iterations.
-                        <br><br>
-
-                        As a game programmer, I am fascinated with the art of programming and is always willing to
-                            pick up new skills and experiment with new technologies. I am currently studying computer
-                            graphics and C++ independently in my free time.
-                    </p>
+                    <div class="bio col-lg-8 col-lg-offset-2 text-center">
+                        <p class="objective-statement">
+                            I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
+                        </p>
+                        <p>
+                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
+                        </p>
+                        <p>
+                            As a game designer, I see games as art and an extremely expressive medium. I loves making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tackling tricky design problems through relentless playtesting and iterations.
+                        </p>
+                        <p>
+                            As a game programmer, I am fascinated with the art of programming and is always willing to
+                                pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
+                        </p>
+                        
+                    </div>
                 </div>
             </div>
         </div>
