Update heading style

--- a/the-sea.html
+++ b/the-sea.html
@@ -109,6 +109,7 @@
                     </table>
                     <p class="notes">(As this is a solo project, the GDD is written for myself, where I have so many conversations with myself!!!)</p>
                 </div>
+                <!-- /table-responsive -->
                 
                 <hr class="star-primary">
 
@@ -243,6 +244,8 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+                <!-- /carousel -->
+                
             </article>
         </div>
     </div>
