--- a/404.html
+++ b/404.html
@@ -19,8 +19,9 @@
 
     <!-- Custom Fonts -->
     <script src="https://use.fontawesome.com/48cbb5f483.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Voces" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 
 </head>
 
@@ -75,7 +76,10 @@
                     Seems you are lost, travler.
                 </p>
                 <p>
-                    Maybe you want to look at my <a href="http://www.yidizhu.com/#portfolio"> portfolio</a> or <a href="http://www.yidizhu.com/articles/fyp"> read something interesting</a>?
+                    Maybe you want to look at my <a href="http://www.yidizhu.com/#portfolio"> portfolio</a> or <a href="http://www.yidizhu.com/blog"> read something</a>?
+                </p>
+                <p>
+                    Or it would be nice to just <a href="mailto:yidiz@andrew.cmu.edu">send me an email</a>!
                 </p>
             </div>
         </div>
