--- a/blog.html
+++ b/blog.html
@@ -17,9 +17,9 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Voces" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
