--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Voces" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
@@ -77,7 +77,7 @@
                             I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
                         </p>
                         <p>
-                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
+                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
                         </p>
                         <p>
                             As a game designer, I see games as art and an extremely expressive medium. I loves making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tackling tricky design problems through relentless playtesting and iterations.
