--- a/maestro.html
+++ b/maestro.html
@@ -19,9 +19,9 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Voces" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 
 </head>
 
@@ -71,28 +71,78 @@
             <article>
                 <h2>Maestro</h2>
                 <hr class="star-primary">
-                <p class="notes text-center">!!! Website under construction !!!</p>
-                <p> This should be general project information.</p>
-                <hr class="star-light">
+                <h3>General Information</h3>
+                <div class="table-responsive">
+                    <table class="table">
+                    <tbody>
+                        <tr>
+                            <td>Project Duration</td>
+                            <td>2 weeks</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team Size</td>
+                            <td>4</td>
+                        </tr>
+                        
+                        <tr>
+                            <td>My Contributions</td>
+                            <td>Game design, programming, playtesting</td>
+                        </tr>
+
+                        <tr>
+                            <td>Theme</td>
+                            <td>Naïve guest + Feeling of freedom</td>
+                        </tr>
+
+                        <tr>
+                            <td>Platform</td>
+                            <td>Hololens + Handmade props</td>
+                        </tr>
+                    </tbody>
+                    </table>
+                    <p class="notes">
+                        At ETC, the notion of <b>guest</b> is used to keep the mindset that <b>players</b> are not <b>users</b>. We see players more in the way Disney sees their guests.
+                    </p>
+                </div>
+                <!-- /table-responsive -->
+                <hr class="star-primary">
 
                 <div class="video-wrapper">
                     <iframe src="https://www.youtube.com/embed/H-52hrKzx5A" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <hr class="star-light">
+                <hr class="star-primary">
+                <h3>Brief Description</h3>
+                <p>
+                    This game delivers the feel of freedom by giving the guest the ability to conduct music and change the whole world with his way of conducting.
+                </p>
 
-                <p class="notes">You know what, coding website is fun! Almost as fun as making games!</p>
                 <p>
-                    Pellentesque neque sem, hendrerit ut pharetra ultrices, volutpat vitae nunc. Morbi vulputate erat eros, eget posuere ipsum pretium ut. Praesent ac tellus neque. Pellentesque nec fringilla sem, fermentum accumsan lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut vitae tristique odio. Donec odio diam, egestas eu felis vitae, mollis euismod nisl. Mauris imperdiet urna mauris, eget dapibus ex pharetra sed. Nulla laoreet tristique lacus, vel aliquet est commodo in. Cras consectetur purus at suscipit volutpat. Donec in interdum mi. Cras ut sem et sapien efficitur tristique. Duis a sagittis lacus. Vivamus pharetra a ex molestie hendrerit. Vivamus at sapien vehicula lorem viverra condimentum.
+                    In addition to the feel of freedom, we were also required to not give the naïve guest any explicit instructions at all and should let the guest figure out what to do by themselves.
+                </p>
+
+                <h3>Layers of Feedbacks</h3>
+                <p>
+                    To give the guest a sense of real conducting, and encourage them to stay on the right tempo, we provided layers of feedbacks for them.
                 </p>
                 <p>
-                    Proin euismod auctor nisl, id placerat massa blandit sed. Ut aliquam in tellus non varius. Vivamus dignissim tempus erat, ultrices tempus metus pretium sit amet. Vestibulum pulvinar, urna hendrerit pretium dignissim, arcu erat mattis augue, sed tempor quam urna ut tellus. Mauris lobortis dolor in sem egestas, ut pharetra ipsum suscipit. Morbi pulvinar elit at leo tempor iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eleifend vitae dui rutrum efficitur. Aliquam ornare malesuada urna, non tristique justo posuere sit amet. Proin egestas ligula eu tellus commodo vulputate. Nam sit amet condimentum odio. Mauris suscipit cursus consequat.
+                    <b>Auditory feedbacks:</b>
                 </p>
+                <ol>
+                    <li>Transition sound when the tempo changes more than a certain percentage</li>
+                    <li>The music plays faster when the guest conducts fast, and vice versa</li>
+                </ol>
                 <p>
-                    Sed feugiat imperdiet nibh dictum tincidunt. Praesent in sollicitudin est. Nam vel metus a mauris fermentum ultrices. Morbi semper massa eu leo egestas, vitae maximus ex dictum. Donec convallis dignissim dolor vitae auctor. Maecenas facilisis congue lacus vitae efficitur. Aliquam sit amet orci augue. Pellentesque porta, risus placerat eleifend molestie, ipsum sapien convallis magna, et dictum velit tellus in enim. Vivamus condimentum diam in mi semper, et facilisis erat sagittis. Praesent posuere rhoncus quam, at pretium urna sollicitudin sed. Integer ut urna sit amet dolor eleifend consequat at eget elit.
+                    <b>Visual feedbacks:</b>
                 </p>
-                <p>
-                    Pellentesque eget arcu volutpat, mollis lectus vel, lobortis nisl. Praesent vitae hendrerit arcu. Nam interdum lacus eros, volutpat sollicitudin ipsum maximus non. Cras lobortis nibh vel mattis mattis. Fusce egestas porttitor leo quis tempor. Nunc ullamcorper mi in neque blandit sagittis. Nam porta vehicula tortor quis tempus. Sed dictum est tortor, sed maximus magna dapibus id. Donec efficitur, dui vel faucibus molestie, ipsum dui ultricies ex, varius consequat risus nunc ac ligula. Duis ultrices ligula ut orci elementum, et fringilla nisl convallis. Praesent quis libero felis. In eget odio at mi ornare sollicitudin. In tempor ex ante, vitae accumsan erat placerat auctor. Cras vel nisi a lectus consectetur euismod. Donec dui eros, vehicula non sagittis nec, ultrices in enim.
-                </p>
+                <ol>
+                    <li>The world becomes red when the guest conducts too fast</li>
+                    <li>The world becomes blue when the guest conducts too slow</li>
+                    <li>The world becomes black and white when the guest stops conducting</li>
+                    <li>There are several music notes scattered all around the world. They move fast when the guest conducts fast and vice versa</li>
+                </ol>
+
+                <p class="notes text-center">To be continued... Website still under construction</p>
 
             </article>
 
