--- a/ripple-blossom.html
+++ b/ripple-blossom.html
@@ -71,6 +71,38 @@
             <article>
                 <h2>Ripple Blossom</h2>
                 <hr class="star-primary">
+                <h3>General Information</h3>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td>Project Duration</td>
+                            <td>5 months</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team Size</td>
+                            <td>6</td>
+                        </tr>
+
+                        <tr>
+                            <td>Genre</td>
+                            <td>Puzzle</td>
+                        </tr>
+
+                        <tr>
+                            <td>Platform</td>
+                            <td>Andoird/iOS</td>
+                        </tr>
+
+                        <tr>
+                            <td>My Role</td>
+                            <td>Game designer, programmer</td>
+                        </tr>
+                    </tbody>
+                    </table>
+                </div>
+                <!-- /table-responsive -->
 
                 <div>
                     <p>
