--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                             Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
                         </p>
                         <p>
-                            As a game designer, I see games as art and an extremely expressive medium. I loves making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tackling tricky design problems through relentless playtesting and iterations.
+                            As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tackling tricky design problems through relentless playtesting and iterations.
                         </p>
                         <p>
-                            As a game programmer, I am fascinated with the art of programming and is always willing to
+                            As a game programmer, I am fascinated with the art of programming and am always willing to
                                 pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
                         </p>
                         
