--- a/the-sea.html
+++ b/the-sea.html
@@ -19,9 +19,9 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Voces" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 
 </head>
 
@@ -109,8 +109,6 @@
                     </table>
                 </div>
                 <!-- /table-responsive -->
-
-                <p class="notes">(As this is a solo project, the GDD is written for myself, where I have so many conversations with myself!!!)</p>
                 
                 <hr class="star-primary">
 
