--- a/bopit.html
+++ b/bopit.html
@@ -44,13 +44,13 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
+                    <a href="#game-design">Game Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                    <a href="#game-programming">Game Programming</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="resources/resume.pdf">Resume</a>
+                    <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
                 </li>
                 <!--
                 <li class="page-scroll">
