--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#game-design">Game Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                    <a href="#game-programming">Game Programming</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
@@ -80,10 +80,10 @@
                             Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
                         </p>
                         <p>
-                            As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tackling tricky design problems through relentless playtesting and iterations.
+                            As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tricky design challenge through collaboration, playtesting and iterations.
                         </p>
                         <p>
-                            As a game programmer, I am fascinated with the art of programming and am always willing to
+                            As a game programmer, I am fascinated with the power of programming and am always willing to
                                 pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
                         </p>
                         
@@ -93,12 +93,12 @@
         </div>
     </div>
 </header>
-<!-- Portfolio Grid Section -->
-<section id="portfolio">
+
+<section id="game-design" class="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Portfolio</h2>
+                <h2>Game Design</h2>
                 <hr class="star-light">
             </div>
         </div>
@@ -129,30 +129,6 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Bop It Extreme Home Edition</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | <i>Carpentar & Programmer</i></p>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>The Soundbearier</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | <i>Programmer </i></p>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item">
                 <a href="http://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -162,18 +138,6 @@
                     <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Indie Game | <i>Designer & Programmer</i></p>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Primal Life</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -198,6 +162,56 @@
                     <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Research Project | <i>Solo Developer</i></p>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section id="game-programming" class="portfolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>Game Programming</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Bop It Extreme Home Edition</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | <i>Carpentar & Programmer</i></p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>The Soundbearier</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | <i>Programmer </i></p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Primal Life</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
