--- a/maestro.html
+++ b/maestro.html
@@ -44,10 +44,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#game-design">Game Design</a>
+                    <a href="http://www.yidizhu.com/#game-design">Game Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#game-programming">Game Programming</a>
+                    <a href="http://www.yidizhu.com/#game-programming">Game Programming</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
