--- a/liyu/index.html
+++ b/liyu/index.html
@@ -119,20 +119,6 @@
                         </div>
                     </a>
                 </div>
-
-                <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
-                    <a href="project.html">
-                        <div class="card h-100">
-                            <img class="card-img-top" src="resources/images/5.jpg" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                <i class="fa fa-music" aria-hidden="true"></i> Music Two
-                                </h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
             </div>
             
 
@@ -168,24 +154,20 @@
                         <h2 id="contact">Contact</h2>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:yul4@andrew.cmu.edu" class="btn-social btn-outline"><i
+                                <a href="#" class="btn-social btn-outline"><i
                                 class="fa fa-envelope"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
+                                <a href="#" class="btn-social btn-outline"> <i
                                 class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                <a href="#" class="btn-social btn-outline"><i
                                 class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                <a href="#" class="btn-social btn-outline"><i
                                 class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
-                                class="fa fa-fw fa-weibo"></i></a>
                             </li>
                         </ul>
                     </div>
