Update landing page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                             I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
                         </p>
                         <p>
-                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay engineer.
+                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making  fun and meaningful games, and hopes to enter the game industry as a gameplay engineer.
                         </p>
+                        <!--
                         <p>
                             As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tricky design challenge through collaboration, playtesting and iterations.
                         </p>
@@ -86,7 +87,7 @@
                             As a game programmer, I am fascinated with the power of programming and am always willing to
                                 pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
                         </p>
-                        
+                        -->
                     </div>
                 </div>
             </div>
