font size change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
                         </p>
                         <p>
-                            Hi there, I'm Yidi! I am a passionate <b>game designer and programmer</b>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <b>Entertainment Technology Center</b> of <b>Carnegie Mellon University</b>. I dedicate myself to making  fun and meaningful games, and hopes to enter the game industry as a gameplay engineer.
+                            Hi there, I'm Yidi! I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>. I dedicate myself to making  fun and meaningful games, and hopes to enter the game industry as a gameplay engineer.
                         </p>
                         <!--
                         <p>
