--- a/maestro.html
+++ b/maestro.html
@@ -97,7 +97,7 @@
 
                         <tr>
                             <td>Platform</td>
-                            <td>Hololens + Handmade props</td>
+                            <td>HTC Vive</td>
                         </tr>
                     </tbody>
                     </table>
