--- a/ripple-blossom.html
+++ b/ripple-blossom.html
@@ -121,7 +121,10 @@
                         <iframe class="video" src="https://www.youtube.com/embed/UWv2LWJ9d3Q" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </p>
+
+                    <p class="notes text-center">To be continued... Website still under construction</p>
                     
+                    <!--
                     <p>
                         And here is the download page! You can also play online <a href="rb/index.html">here</a>.
                     </p>
@@ -177,6 +180,8 @@
                     </p>
 
                 </div>
+
+            -->
 
             </article>
         </div>
