Simplify Landing Page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Producer & Programmer </i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -126,7 +126,7 @@
                     </div>
                     <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Solo Developer </i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -138,7 +138,7 @@
                     </div>
                     <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Indie Game | <i>Designer & Programmer</i></p>
+                <p class="portfolio-title">Published Indie Game</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -150,7 +150,7 @@
                     </div>
                     <img src="resources/images/portfolio/dual-balance.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -162,7 +162,7 @@
                     </div>
                     <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Research Project | <i>Solo Developer</i></p>
+                <p class="portfolio-title">Research Project</p>
             </div>
 
         </div>
@@ -188,7 +188,7 @@
                     </div>
                     <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Carpentar & Programmer</i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -200,7 +200,7 @@
                     </div>
                     <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Programmer </i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -212,7 +212,7 @@
                     </div>
                     <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -224,7 +224,7 @@
                     </div>
                     <img src="resources/images/portfolio/primal-space.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
+                <p class="portfolio-title">Course Project</p>
             </div>
 
         </div>
