Add you're fired

--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
         <div class="row">
 
             <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/you-are-fired.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>You're Fired</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | <i>Programmer</i></p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item">
                 <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -215,6 +227,7 @@
                 <p class="portfolio-title">Course Project</p>
             </div>
 
+<!--
             <div class="col-lg-4 col-md-6 portfolio-item">
                 <a href="http://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -226,7 +239,7 @@
                 </a>
                 <p class="portfolio-title">Course Project</p>
             </div>
-
+-->
         </div>
     </div>
 </section>
