--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project on HTC Vive</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -138,7 +138,7 @@
                     </div>
                     <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Published Indie Game</p>
+                <p class="portfolio-title">Published Mobile Indie Game</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -188,7 +188,7 @@
                     </div>
                     <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project | <i>Programmer</i></p>
+                <p class="portfolio-title">Course Project on Omni & Oculus Touch</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -200,7 +200,7 @@
                     </div>
                     <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project on Makey Makey</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -212,7 +212,7 @@
                     </div>
                     <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project on HoloLens</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
