Update homepage heading font

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project on HTC Vive</p>
+                <p class="portfolio-title">Course Project | HTC Vive</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -126,7 +126,7 @@
                     </div>
                     <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project | PC</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -150,7 +150,7 @@
                     </div>
                     <img src="resources/images/portfolio/dual-balance.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project | Mobile</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -162,7 +162,7 @@
                     </div>
                     <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Research Project</p>
+                <p class="portfolio-title">Research Project | PC</p>
             </div>
 
         </div>
@@ -188,7 +188,7 @@
                     </div>
                     <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project on Omni & Oculus Touch</p>
+                <p class="portfolio-title">Course Project | Omni & Oculus Touch</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -200,7 +200,7 @@
                     </div>
                     <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project on Makey Makey</p>
+                <p class="portfolio-title">Course Project | Makey Makey</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -212,7 +212,7 @@
                     </div>
                     <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project on HoloLens</p>
+                <p class="portfolio-title">Course Project | HoloLens</p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item">
@@ -224,7 +224,7 @@
                     </div>
                     <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
                 </a>
-                <p class="portfolio-title">Course Project</p>
+                <p class="portfolio-title">Course Project | PC</p>
             </div>
 
 <!--
