--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Yidi Zhu 2017. Re-designed from <a
-                        href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>.
+                    Copyright &copy; Yidi Zhu 2017
                 </div>
             </div>
         </div>
